# high-risk-paper-trader

./: .env.example  .gitignore  .vercelignore  README.md  Trading Control.command  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/tests/: test_ledger.py  test_live_gate.py  test_players.py  test_realism.py  test_risk.py  test_runtime_config.py  test_simulator.py  test_strategies.py  test_strategy_lab.py
backend/trading_system/: __init__.py  ai_clients.py  alpaca.py  config.py  ledger.py  live_gate.py  main.py  market_data.py  models.py  news.py  options_data.py  players.py  reporting.py  risk.py  runtime_config.py  service.py  simulator.py  storage.py  strategies.py  strategy_lab.py  universe.py
scripts/: tradectl.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/data/: page.tsx
src/app/journal/: page.tsx
src/app/report/: page.tsx
src/app/risk/: page.tsx
src/app/setup/: page.tsx
src/app/strategies/: page.tsx
src/app/welcome/: page.tsx
src/components/: app-shell.tsx  dashboard-client.tsx  data-credibility-client.tsx  market-chart.tsx  onboarding-wizard.tsx  report-client.tsx  risk-cockpit-client.tsx  setup-client.tsx  strategies-client.tsx  term-explain.tsx  trade-journal-client.tsx  welcome-client.tsx
src/lib/: api.ts  i18n.tsx  use-translated-texts.ts
