[project]
name = "high-risk-paper-trader"
version = "0.1.0"
description = "A paper trading research system for aggressive weekly strategy simulation."
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4",
  "duckdb>=1.1.3",
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]

[project.optional-dependencies]
test = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
